--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,7 @@
   ],
   "exclude": [
     "node_modules",
-    "lib"
-  ],
-  "atom": {
-    "rewriteTsconfig": false
-  }
+    "lib",
+    "examples"
+  ]
 }
